tests/fixtures/invalid/bool_bitxor_str.py
# Cannot bitwise XOR Bool and Str
x: bool = True ^ "hello"
